# Understory

./: .gitignore  LICENSE  Launch Bonsai.cmd  README.md  build.cmd  dev.cmd  index.html  package.json  pnpm-lock.yaml  smoke_test.py  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  job.rs  llama_client.rs  main.rs  sidecar.rs  think_strip.rs
src/components/: Composer.tsx  Conversation.tsx  Message.tsx  Reasoning.tsx  SettingsDrawer.tsx  StatusBar.tsx  TreeView.tsx
src/lib/: bonsaiScene.ts  ipc.ts  markdown.ts
src/state/: store.ts
src/styles/: globals.css
tools/: capture_tree_data.py  tree_data.json  tree_prototype.html
