[package]
name = "bonsai"
version = "1.0.0"
description = "Bonsai — native desktop chat for the local 1-bit Bonsai-27B model"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
eventsource-stream = "0.2"
bytes = "1"

anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows Job Object: OS-enforced kill of the llama-server child if this
# process dies (crash / force-quit / debugger stop), not just on clean exit.
[target.'cfg(windows)'.dependencies]
win32job = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
